add progress to beamer diaporama

--- a/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
+++ b/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
@@ -77,7 +77,7 @@
 \begin{frame}
 
 \begin{itemize}
-\item Total earth covering defined by path,row grid pattern and achieved every 16 days
+\item Total earth covering defined by (path,row) grid pattern and achieved every 16 days
 \end{itemize}
 \begin{columns}
 \begin{column}{\textwidth}
@@ -138,7 +138,7 @@ System (\begin{itshape}ex: UTM, Lambert IV, Lambert 93, Web Mercator,...\end{its
 
 \begin{frame}
 \begin{itemize}
- \item Landast-8 georeferencing can be checked comparing with another georeferenced source like $IGN$ using a $SIG$ (open source $QGIS$).
+ \item Landast-8 georeferencement can be checked comparing with another georeferenced source like $IGN$ using a $SIG$ (open source $QGIS$).
 \end{itemize}
 
 \begin{columns}[t]
@@ -193,7 +193,7 @@ System (\begin{itshape}ex: UTM, Lambert IV, Lambert 93, Web Mercator,...\end{its
 \subsection{Image query}
 \begin{frame}
  \begin{itemize}
- \item Query images from \href{https://earthexplorer.usgs.gov/}{\begin{itshape}U.S geological Survey\end{itshape}} website
+ \item Query images from \href{https://earthexplorer.usgs.gov/}{\begin{itshape}U.S geological Survey\end{itshape}} website with criterias:
  \begin{itemize}
   \item cloud covering $\le$ 20\%\\
   \item day acquisition\\
@@ -258,7 +258,7 @@ System (\begin{itshape}ex: UTM, Lambert IV, Lambert 93, Web Mercator,...\end{its
 \begin{frame}
  \begin{itemize}
   \item Take cities surfaces and densities from 2013 official census (\href{http://www.insee.fr/fr/ppp/bases-de-donnees/recensement/populations-legales/pages2015/zip/HIST_POP_COM_RP13.zip}{INSEE})
-  \item Take cities latitude and longitude from Google geolocator (\href{https://geopy.readthedocs.io/en/1.10.0/}{Python API})
+  \item Take cities latitude and longitude from Google geolocator (\href{https://geopy.readthedocs.io/en/1.10.0/}{Python API Geopy})
  \end{itemize}
 
 \begin{columns}
@@ -278,7 +278,7 @@ Cormoranche-sur-Sa\^{o}ne & 46.240532 & 4.830863 & 9 & 118.9\\
 \hline 
 Paris & 48.856614 & 2.352222 & 105.4 & 21153.9\\
 \hline
-Lyon & 45.764043 & 4.835659 & 47.87 & 10459.8\\
+Lyon & 45.764043 & 4.835659 & 47.87 & 10117.0\\
 \hline
 Tours & 47.394144 & 0.68484 & 34.67 & 3888.2\\
 \hline
@@ -322,12 +322,12 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9\\
   \begin{overlayarea}{\linewidth}{3cm}
   {\tiny
     \begin{itemize}
-    \item[catégory 1:] density between 0 and 500
-    \item[catégory 2:] density between 500 and 2000
-    \item[catégory 3:] density between 2000 and 5000
-    \item[catégory 4:] density between 5000 and 10000
-    \item[catégory 5:] density between 10000 and 13000
-    \item[catégory 6:] density greater than 13000 
+    \item[catégory 1:] density between 0 and 500 habs/km\textsuperscript{2}
+    \item[catégory 2:] density between 500 and 2000 habs/km\textsuperscript{2}
+    \item[catégory 3:] density between 2000 and 5000 habs/km\textsuperscript{2}
+    \item[catégory 4:] density between 5000 and 10000 habs/km\textsuperscript{2}
+    \item[catégory 5:] density between 10000 and 13000 habs/km\textsuperscript{2}
+    \item[catégory 6:] density greater than 13000 habs/km\textsuperscript{2}
     \end{itemize}
   }
   \end{overlayarea}
@@ -340,7 +340,7 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9\\
 {\tiny
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline 
-name & latitude (degrees) & longitude (degrees) & surface (km\textsuperscript{2}) & density (habs/km\textsuperscript{2}) & density (category)\\
+city & latitude (degrees) & longitude (degrees) & surface (km\textsuperscript{2}) & density (habs/km\textsuperscript{2}) & density (category)\\
 \hline
 Ozan & 46.391534 & 4.915265 & 6.6 & 98.3 & 1\\
 \hline 
@@ -348,7 +348,7 @@ Cormoranche-sur-saone & 46.240532 & 4.830863 & 9 & 118.9 & 1\\
 \hline 
 Paris & 48.856614 & 2.352222 & 105.4 & 21153.9 & 6\\
 \hline
-Lyon & 45.764043 & 4.835659 & 47.87 & 10459.8 & 5\\
+Lyon & 45.764043 & 4.835659 & 47.87 & 10117.0 & 5\\
 \hline
 Tours & 47.394144 & 0.68484 & 34.67 & 3888.2 & 3\\
 \hline
@@ -373,8 +373,8 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9 & 1\\
  \item Compute Normalized Difference Vegetation Indice using bands 4 (Red) and 5 (Near-Infra-Red) for each dataset :
  \item Values between -1 and 1
  \item $\leq 0$ for water, snow and cloud
- \item $0$ for  ground without vegetation
- \item $\geq 0$ ground vegetation
+ \item $= 0$ for  ground without vegetation
+ \item $\geq 0$ for ground vegetation
 }
 \end{itemize}
 {\scriptsize \[NDVI=\frac{NIR-R}{NIR+R}\]}
@@ -450,7 +450,7 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
   \centering
-  \tiny NDVI (Brignancourt,July 2013) \par
+  \tiny NDVI - Brignancourt (66 habs/km\textsuperscript{2}) - July 2013) \par
   \end{overlayarea}
   
   \begin{overlayarea}{\linewidth}{0.9cm}
@@ -459,7 +459,7 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
   \centering
-  \tiny NDVI (Louvres,July 2013) \par
+  \tiny NDVI - Louvres (824 habs/km\textsuperscript{2}) - July 2013) \par
   \end{overlayarea}
   
   \begin{overlayarea}{\linewidth}{1.2cm}
@@ -468,7 +468,7 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
   \centering
-  \tiny NDVI (Abbeville,July 2013) \par
+  \tiny NDVI - Abbeville (914 habs/km\textsuperscript{2}) - July 2013 \par
   \end{overlayarea}
   
   \begin{overlayarea}{\linewidth}{1.6cm}
@@ -477,7 +477,7 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
   \centering
-  \tiny NDVI (Lyon,July 2013) \par
+  \tiny NDVI - Lyon (10117 habs/km\textsuperscript{2}) - July 2013) \par
   \end{overlayarea}  
  \end{column}
 
@@ -502,19 +502,19 @@ Besancon & 47.237829 & 6.024054 & 65.05 & 1797.9 & 1\\
 \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
 
 \hline 
-nom &  bin-1 & bin-2 & ... & bin-511 & bin-512 &... & bin-1023 & bin-1024 & densité (habs/km\textsuperscript{2})  & density (category)\\
+city &  bin-1 & bin-2 & ... & bin-511 & bin-512 &... & bin-1023 & bin-1024 & density (habs/km\textsuperscript{2})  & density (category)\\
 \hline 
-Ozan & 0 & 0 & ... & 1 & 5 & ... & 0 & 0 & 93.0 & 1\\
+Ozan & 0 & 0 & ... & 1 & 5 & ... & 0 & 0 & 93.8 & 1\\
 \hline 
-Cormoranche-sur-Sa\^{o}ne & 0 & 0 & ... & 1 & 4 & ... & 0 & 0 & 107.0 & 1\\
+Cormoranche-sur-Sa\^{o}ne & 0 & 0 & ... & 1 & 4 & ... & 0 & 0 & 118.9 & 1\\
 \hline 
-Paris & 0 & 0 & ... & 1953 & 1815 & ... & 0 & 0 & 21288.0 & 6\\
+Paris & 0 & 0 & ... & 1953 & 1815 & ... & 0 & 0 & 21153.9 & 6\\
 \hline
-Lyon & 0 & 0 & ... & 1099 & 1032 & ... & 0 & 0 & 460.0 & 5\\
+Lyon & 0 & 0 & ... & 1099 & 1032 & ... & 0 & 0 & 10117.0 & 5\\
 \hline
-Tours & 0 & 0 & ... & 268 & 238 & ... & 0 & 0 & 3888.0 & 3\\
+Tours & 0 & 0 & ... & 268 & 238 & ... & 0 & 0 & 3888.2 & 3\\
 \hline
-Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.0 & 1\\
+Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
 \hline 
 ... & ... & ... & ... & ... & ... & ... & ... & ... & ... & ... \\
 \hline
@@ -531,17 +531,17 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.0 & 1\\
   \hline
   category & number of samples\\
   \hline
-  1 & 32533\\
+  \textbf{1} & 32533\\
   \hline
-  2 & 1252\\
+  \textbf{2} & 1252\\
   \hline
-  3 & 288\\
+  \textbf{3} & 288\\
   \hline
-  4 & 78\\
+  \textbf{4} & 78\\
   \hline
-  5 & 15\\
+  \textbf{5} & 15\\
   \hline
-  6 & 24 \\
+  \textbf{6} & 24 \\
   \hline
  \end{tabular}
 \end{table}
@@ -553,60 +553,96 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.0 & 1\\
 
 \section{Supervised Classification}
 
-\subsection{Support-Vector Machine (Gaussian Kernel)}
+\subsection{K-Nearest Neighbors}
 \begin{frame}
 \begin{itemize}
- \item Overcome imbalanced data by increasing regularization parameter $C_{i}$ for minority classes $i$ :  $C_{i} = 10000/n_{i}$\\
- \item Cross-validated (stratified 5-folds) gamma coefficient ($\gamma = 0.001$)
-\end{itemize}
-\begin{columns}[b]
+ \item Overcome imbalanced data by 
+  \begin{itemize}
+  {\scriptsize
+    \item Oversampling minority classes using SMOTE technique (Synthetic Minority Oversampling TEchnique) 
+      \begin{columns}
+      \begin{column}{0.5\textwidth}
+      \centering\vfill
+      \includegraphics[scale=0.17]{images/oversampling/smote.png}
+      \end{column}
+      \begin{column}{0.5\textwidth}
+      {\tiny
+      Let's $x_{i}$,$x_{i1}$, $x_{i2}$, $x_{i3}$ and $x_{i4}$ be points of minority class $i$ and $y_{jk}$ the points of 
+      majority class $j$ , choose each new sample $r_{l}$ for class $i$ that maximizes $\sum \limits_{\underset{}{k=1}}^{n_{j}} (y_{jk}-r_{l})^2$
+      }
+      \end{column}
+    \end{columns}
+    \item Run training on obtained balanced data.
+  }
+  \end{itemize}
+ \end{itemize}
+ \begin{itemize}
+  \item Best cross-validation (stratified 3-folds) of \textbf{$94.74$\%} obtained for number of neighboors $k = 5$. 
+ \end{itemize}
+\end{frame}
 
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/France/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny France density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/France/knn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny France density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+
+\begin{columns}
 \begin{column}{0.7\textwidth}
-\begin{overlayarea}{\linewidth}{4cm}
   \begin{table}
   \begin{center}
-  \begin{adjustbox}{max width=0.7\textwidth}
+  \begin{adjustbox}{max width=0.6\textwidth}
+  {\tiny
   \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix after refitting\end{bf}}} \\
     \hline
      & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
     \hline
-    \textbf{1} & 0 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
     \hline
-    \textbf{2} & 0 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
     \hline
-    \textbf{3} & 0 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
     \hline
-    \textbf{4} & 0 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
     \hline
-    \textbf{5} & 0 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
     \hline
-    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
     \hline
   \end{tabular}
+  }
   \end{adjustbox}
   \end{center}
   \end{table}
-\end{overlayarea}
-\begin{overlayarea}{\linewidth}{0.5cm}
-  \centering
-  \tiny confusion matrix after refitting\par
-\end{overlayarea}  
 \end{column}
-\begin{column}{0.3\textwidth}
- \begin{overlayarea}{\linewidth}{2cm}
- {\scriptsize
-  \begin{block}{best cross-validation score}
-   93\%
-  \end{block}
-  }
- \end{overlayarea}
- \begin{overlayarea}{\linewidth}{1cm}
-  {\small
-  \begin{block}{mean score per class after refitting}
+\begin{column}{0.5\textwidth}
    \begin{table}
     \begin{center}
-    \begin{adjustbox}{max width=0.7\textwidth}
+    \begin{adjustbox}{max width=0.5\textwidth}
+    {\tiny 
     \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class after reffiting\end{bf}} \\
       \hline
       \textbf{category} & \textbf{mean score}\\
       \hline
@@ -622,23 +658,128 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.0 & 1\\
       \hline
       \textbf{6} & 100\% \\
       \hline
+      \textbf{mean} & 100\% \\
+      \hline
     \end{tabular}
+    }
     \end{adjustbox}
     \end{center}
   \end{table}
-  \end{block}
-  }
- \end{overlayarea}
-
-
 \end{column}
 
 \end{columns}
 \end{frame}
 
 \subsection{Neural Network}
-\begin{frame}
 
+\begin{frame}
+\begin{itemize}
+ \item Overcome imbalanced data by 
+  \begin{itemize}
+  {\scriptsize
+    \item Majoring error by weights to penalize error on minority class, during back-propagation : $w_i=\frac{n_1}{n_i}$.
+  }
+  \end{itemize}
+ \end{itemize}
+ \begin{itemize}
+  \item Best cross-validation (stratified 3-folds) of \textbf{$92.26$\%} with SGD learning rate of $0.001$ and penalization of $0.001$. 
+ \end{itemize}
+\end{frame}
+
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/France/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny France density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/France/nn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny France density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+
+\begin{columns}
+\begin{column}{0.7\textwidth}
+  \begin{table}
+  \begin{center}
+  \begin{adjustbox}{max width=0.6\textwidth}
+  {\tiny
+  \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix after refitting\end{bf}}} \\
+    \hline
+     & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+    \hline
+    \textbf{1} & 29743 & 2281 & 367 & 95 & 24 & 23\\
+    \hline
+    \textbf{2} & 207 & 853 & 164 & 23 & 2 & 3\\
+    \hline
+    \textbf{3} & 2 & 36 & 236 & 9 & 2 & 3\\
+    \hline
+    \textbf{4} & 0 & 0 & 2 & 76 & 0 & 0\\
+    \hline
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \hline
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \hline
+  \end{tabular}
+  }
+  \end{adjustbox}
+  \end{center}
+  \end{table}
+\end{column}
+\begin{column}{0.5\textwidth}
+   \begin{table}
+    \begin{center}
+    \begin{adjustbox}{max width=0.5\textwidth}
+    {\tiny 
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class after reffiting\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{mean score}\\
+      \hline
+      \textbf{1} & 91.42\% \\
+      \hline
+      \textbf{2} & 68.13\% \\
+      \hline
+      \textbf{3} & 91.95\% \\
+      \hline
+      \textbf{4} & 97.64\% \\
+      \hline
+      \textbf{5} & 100\% \\
+      \hline
+      \textbf{6} & 100\% \\
+      \hline
+      \textbf{mean} & 89.82\% \\
+      \hline
+    \end{tabular}
+    }
+    \end{adjustbox}
+    \end{center}
+  \end{table}
+\end{column}
+\end{columns}
+\end{frame}
+
+\subsection{Support-Vector Machine (Gaussian Kernel)}
+\begin{frame}
+\begin{itemize}
+ \item Overcome imbalanced data by increasing regularization parameter $C_{i}$ for minority classes $i$ :  $C_{i} = 10000/n_{i}$
+ \item Cross-validated (stratified 5-folds) gamma coefficient ($\gamma = 0.001$)
+\end{itemize}
 \end{frame}
 
 \subsection{Convolutional Neural Network}
@@ -646,15 +787,693 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.0 & 1\\
 
 \end{frame}
 
-\subsection{K-Nearest Neighboors}
-\begin{frame}
-
-\end{frame}
-
 \section{Testing classification}
+
+\subsection{Data}
 \begin{frame}
+\begin{itemize}
+{\scriptsize
+ \item Take ground truth densities and surfaces for \href{https://www.bfs.admin.ch/bfs/fr/home/statistiques/population/effectif-evolution/population.assetdetail.1401563.html}{Switzerland} (2013),
+  \href{https://fr.wikipedia.org/wiki/Liste_des_communes_de_Belgique_par_population}{Belgium} (2015)  and \href{https://www.citypopulation.de/php/netherlands-admin.php}{Netherlands} (2014).
+ \begin{columns}
+  \begin{column}{0.33\textwidth}
+   \begin{table}
+   \begin{center}
+   \begin{adjustbox}{max width=0.5\textwidth}
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Switzerland (2013)\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{number of samples}\\
+      \hline
+      \textbf{1} & 1857\\
+      \hline
+      \textbf{2} & 428\\
+      \hline
+      \textbf{3} & 57\\
+      \hline
+      \textbf{4} & 9\\
+      \hline
+      \textbf{5} & 1\\
+      \hline
+      \textbf{6} & 0 \\
+      \hline
+      \textbf{total} & 2352\\
+      \hline
+    \end{tabular}
+   \end{adjustbox}
+   \end{center}
+   \end{table}
+  \end{column}
+  \begin{column}{0.33\textwidth}
+   \begin{table}
+   \begin{center}
+   \begin{adjustbox}{max width=0.5\textwidth}
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Belgium (2015)\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{number of samples}\\
+      \hline
+      \textbf{1} & 406\\
+      \hline
+      \textbf{2} & 154\\
+      \hline
+      \textbf{3} & 14\\
+      \hline
+      \textbf{4} & 7\\
+      \hline
+      \textbf{5} & 1\\
+      \hline
+      \textbf{6} & 7\\
+      \hline
+      \textbf{total} & 589\\
+      \hline
+    \end{tabular}
+   \end{adjustbox}
+   \end{center}
+   \end{table}
+  \end{column}
+  \begin{column}{0.33\textwidth}
+   \begin{table}
+   \begin{center}
+   \begin{adjustbox}{max width=0.5\textwidth}
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Netherlands (2014)\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{number of samples}\\
+      \hline
+      \textbf{1} & 234\\
+      \hline
+      \textbf{2} & 121\\
+      \hline
+      \textbf{3} & 31\\
+      \hline
+      \textbf{4} & 1\\
+      \hline
+      \textbf{5} & 0\\
+      \hline
+      \textbf{6} & 0 \\
+      \hline
+      \textbf{total} & 388\\
+      \hline
+    \end{tabular}
+   \end{adjustbox}
+   \end{center}
+   \end{table}
+  \end{column}
+ \end{columns}
+ \item Take longitudes and latitudes of each city using Google geolocator
+ \item Take corresponding Landsat-8 datasets for each country in the corresponding year (between May and September, day acquisition, cloud covering $\leq$ 20\%)
+ \begin{columns}
+  \begin{column}{0.33\textwidth}
+  \begin{overlayarea}{\linewidth}{3cm}
+    \centering\vfill
+    \includegraphics[scale=0.20]{images/Switzerland/covering-selection.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{1cm}
+    \centering
+    \tiny Switzerland datasets georeferenced in $UTM$ system\par
+  \end{overlayarea}
+  \end{column}
+  \begin{column}{0.33\textwidth}
+   \begin{overlayarea}{\linewidth}{3cm}
+    \centering\vfill
+    \includegraphics[scale=0.20]{images/Belgium/covering-selection.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{1cm}
+    \centering
+    \tiny Belgium datasets georeferenced in $UTM$ system\par
+  \end{overlayarea}
+  \end{column}
+  \begin{column}{0.33\textwidth}
+  \begin{overlayarea}{\linewidth}{3cm}
+    \centering\vfill
+    \includegraphics[scale=0.20]{images/Netherlands/covering-selection.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{1cm}
+    \centering
+    \tiny Netherlands datasets georeferenced in $UTM$ system\par
+  \end{overlayarea}
+  \end{column}
+ \end{columns}
+}
+\end{itemize}
 
 \end{frame}
 
+\subsection{K-Nearest Neighbors}
 
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Switzerland/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Switzerland/knn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+  \begin{center}
+  \begin{adjustbox}{max width=0.7\textwidth}
+  {\tiny
+  \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix\end{bf}}} \\
+    \hline
+     & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+    \hline
+    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \hline
+    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \hline
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \hline
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \hline
+  \end{tabular}
+  }
+  \end{adjustbox}
+  \end{center}
+  \end{table}
+ \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+    \begin{center}
+    \begin{adjustbox}{max width=0.4\textwidth}
+    {\tiny 
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{mean score}\\
+      \hline
+      \textbf{1} & 100\% \\
+      \hline
+      \textbf{2} & 100\% \\
+      \hline
+      \textbf{3} & 100\% \\
+      \hline
+      \textbf{4} & 100\% \\
+      \hline
+      \textbf{5} & 100\% \\
+      \hline
+      \textbf{6} & 100\% \\
+      \hline
+      \textbf{mean} & 100\% \\
+      \hline
+    \end{tabular}
+    }
+    \end{adjustbox}
+    \end{center}
+  \end{table}
+  \end{overlayarea}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Belgium/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Belgium/knn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+  \begin{center}
+  \begin{adjustbox}{max width=0.7\textwidth}
+  {\tiny
+  \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix\end{bf}}} \\
+    \hline
+     & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+    \hline
+    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \hline
+    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \hline
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \hline
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \hline
+  \end{tabular}
+  }
+  \end{adjustbox}
+  \end{center}
+  \end{table}
+ \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+    \begin{center}
+    \begin{adjustbox}{max width=0.4\textwidth}
+    {\tiny 
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{mean score}\\
+      \hline
+      \textbf{1} & 100\% \\
+      \hline
+      \textbf{2} & 100\% \\
+      \hline
+      \textbf{3} & 100\% \\
+      \hline
+      \textbf{4} & 100\% \\
+      \hline
+      \textbf{5} & 100\% \\
+      \hline
+      \textbf{6} & 100\% \\
+      \hline
+      \textbf{mean} & 100\% \\
+      \hline
+    \end{tabular}
+    }
+    \end{adjustbox}
+    \end{center}
+  \end{table}
+  \end{overlayarea}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Netherlands/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Netherlands/knn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+  \begin{center}
+  \begin{adjustbox}{max width=0.7\textwidth}
+  {\tiny
+  \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix\end{bf}}} \\
+    \hline
+     & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+    \hline
+    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \hline
+    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \hline
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \hline
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \hline
+  \end{tabular}
+  }
+  \end{adjustbox}
+  \end{center}
+  \end{table}
+ \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+    \begin{center}
+    \begin{adjustbox}{max width=0.4\textwidth}
+    {\tiny 
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{mean score}\\
+      \hline
+      \textbf{1} & 100\% \\
+      \hline
+      \textbf{2} & 100\% \\
+      \hline
+      \textbf{3} & 100\% \\
+      \hline
+      \textbf{4} & 100\% \\
+      \hline
+      \textbf{5} & 100\% \\
+      \hline
+      \textbf{6} & 100\% \\
+      \hline
+      \textbf{mean} & 100\% \\
+      \hline
+    \end{tabular}
+    }
+    \end{adjustbox}
+    \end{center}
+  \end{table}
+  \end{overlayarea}
+\end{column}
+\end{columns}
+\end{frame}
+
+\subsection{Neural Network}
+
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Switzerland/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Switzerland/nn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+  \begin{center}
+  \begin{adjustbox}{max width=0.7\textwidth}
+  {\tiny
+  \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix\end{bf}}} \\
+    \hline
+     & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+    \hline
+    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \hline
+    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \hline
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \hline
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \hline
+  \end{tabular}
+  }
+  \end{adjustbox}
+  \end{center}
+  \end{table}
+ \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+    \begin{center}
+    \begin{adjustbox}{max width=0.4\textwidth}
+    {\tiny 
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{mean score}\\
+      \hline
+      \textbf{1} & 100\% \\
+      \hline
+      \textbf{2} & 100\% \\
+      \hline
+      \textbf{3} & 100\% \\
+      \hline
+      \textbf{4} & 100\% \\
+      \hline
+      \textbf{5} & 100\% \\
+      \hline
+      \textbf{6} & 100\% \\
+      \hline
+      \textbf{mean} & 100\% \\
+      \hline
+    \end{tabular}
+    }
+    \end{adjustbox}
+    \end{center}
+  \end{table}
+  \end{overlayarea}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Belgium/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Belgium/nn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+  \begin{center}
+  \begin{adjustbox}{max width=0.7\textwidth}
+  {\tiny
+  \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix\end{bf}}} \\
+    \hline
+     & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+    \hline
+    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \hline
+    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \hline
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \hline
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \hline
+  \end{tabular}
+  }
+  \end{adjustbox}
+  \end{center}
+  \end{table}
+ \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+    \begin{center}
+    \begin{adjustbox}{max width=0.4\textwidth}
+    {\tiny 
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{mean score}\\
+      \hline
+      \textbf{1} & 100\% \\
+      \hline
+      \textbf{2} & 100\% \\
+      \hline
+      \textbf{3} & 100\% \\
+      \hline
+      \textbf{4} & 100\% \\
+      \hline
+      \textbf{5} & 100\% \\
+      \hline
+      \textbf{6} & 100\% \\
+      \hline
+      \textbf{mean} & 100\% \\
+      \hline
+    \end{tabular}
+    }
+    \end{adjustbox}
+    \end{center}
+  \end{table}
+  \end{overlayarea}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Netherlands/density_ground_truth.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - ground truth\par
+  \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+  \begin{overlayarea}{\linewidth}{4cm}
+    \centering\vfill
+    \includegraphics[scale=0.50]{images/Netherlands/nn/density_classification.png}
+  \end{overlayarea}
+  \begin{overlayarea}{\linewidth}{0.5cm}
+    \centering
+    \tiny Switzerland density category - prediction\par
+  \end{overlayarea}
+ \end{column}
+\end{columns}
+\begin{columns}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+  \begin{center}
+  \begin{adjustbox}{max width=0.7\textwidth}
+  {\tiny
+  \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    \multicolumn{7}{|c|}{{\tiny \begin{bf}Confusion matrix\end{bf}}} \\
+    \hline
+     & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+    \hline
+    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \hline
+    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \hline
+    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \hline
+    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \hline
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \hline
+  \end{tabular}
+  }
+  \end{adjustbox}
+  \end{center}
+  \end{table}
+ \end{overlayarea}
+ \end{column}
+ \begin{column}{0.5\textwidth}
+ \begin{overlayarea}{\linewidth}{2cm}
+  \begin{table}
+    \begin{center}
+    \begin{adjustbox}{max width=0.4\textwidth}
+    {\tiny 
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{\begin{bf}Mean score per class\end{bf}} \\
+      \hline
+      \textbf{category} & \textbf{mean score}\\
+      \hline
+      \textbf{1} & 100\% \\
+      \hline
+      \textbf{2} & 100\% \\
+      \hline
+      \textbf{3} & 100\% \\
+      \hline
+      \textbf{4} & 100\% \\
+      \hline
+      \textbf{5} & 100\% \\
+      \hline
+      \textbf{6} & 100\% \\
+      \hline
+      \textbf{mean} & 100\% \\
+      \hline
+    \end{tabular}
+    }
+    \end{adjustbox}
+    \end{center}
+  \end{table}
+  \end{overlayarea}
+\end{column}
+\end{columns}
+\end{frame}
+
+\subsection{Support-Vector Machine (Gaussian Kernel)}
+
+\subsection{Convolutional Neura Networks}
 \end{document}
