add progress to beamer diaporama

--- a/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
+++ b/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
@@ -1025,7 +1025,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - ground truth\par
+    \tiny Belgium density category - ground truth\par
   \end{overlayarea}
  \end{column}
  \begin{column}{0.5\textwidth}
@@ -1035,7 +1035,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - prediction\par
+    \tiny Belgium density category - prediction\par
   \end{overlayarea}
  \end{column}
 \end{columns}
@@ -1116,7 +1116,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - ground truth\par
+    \tiny Netherlands density category - ground truth\par
   \end{overlayarea}
  \end{column}
  \begin{column}{0.5\textwidth}
@@ -1126,7 +1126,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - prediction\par
+    \tiny Netherlands density category - prediction\par
   \end{overlayarea}
  \end{column}
 \end{columns}
@@ -1300,7 +1300,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - ground truth\par
+    \tiny Belgium density category - ground truth\par
   \end{overlayarea}
  \end{column}
  \begin{column}{0.5\textwidth}
@@ -1310,7 +1310,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - prediction\par
+    \tiny Belgium density category - prediction\par
   \end{overlayarea}
  \end{column}
 \end{columns}
@@ -1391,7 +1391,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - ground truth\par
+    \tiny Netherlands density category - ground truth\par
   \end{overlayarea}
  \end{column}
  \begin{column}{0.5\textwidth}
@@ -1401,7 +1401,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{0.5cm}
     \centering
-    \tiny Switzerland density category - prediction\par
+    \tiny Netherlands density category - prediction\par
   \end{overlayarea}
  \end{column}
 \end{columns}
@@ -1476,4 +1476,5 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
 \subsection{Support-Vector Machine (Gaussian Kernel)}
 
 \subsection{Convolutional Neura Networks}
+
 \end{document}
